--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickSP</title>
+    <title>ZirconiumSearch</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -150,8 +150,8 @@
 
                 <div class="menu-section">
                     <h3>关于</h3>
-                    <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                    <button>版本号 0.1.2</button>
+                    <button onclick="window.open('https://github.com/SNESNya/ZirconiumSearch/', '_blank')">GitHub</button>
+                    <button>版本号 0.1.3</button>
                 </div>
             </div>
         </div>
