--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="menu-section">
                     <h3>关于</h3>
                     <button onclick="window.open('https://github.com/SNESNya/ZirconiumSearch', '_blank')">GitHub</button>
-                    <p>版本号 0.2.1 Beta1</p>
+                    <p>版本号 0.2.1</p>
                 </div>
             </div>
         </div>
